# manga-panel-processor

./: LICENSE  README.md  pyproject.toml
src/image_panel_border_cleaner/: __init__.py
src/manga_panel_processor/: __init__.py  border.py  layout.py
