
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# This is the name used for `pip install` (kebab-case is common)
name = "image-panel-border-cleaner"
version = "0.1.0"
authors = [
  { name="avan" },
]
description = "Removes borders using skeletonization and weighted projection analysis."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Intended Audience :: Developers",
]

# This section is crucial: it defines your project's dependencies.
# pip will automatically install these for the user.
dependencies = [
    "numpy",
    "opencv-contrib-python"  # This includes cv2.ximgproc.thinning
]

[project.urls]
Homepage = "https://github.com/avan06/image-panel-border-cleaner"
Issues = "https://github.com/avan06/image-panel-border-cleaner/issues"