
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# This is the name used for `pip install` (kebab-case is common)
name = "manga-panel-processor"
version = "0.2.0"
authors = [
  { name="avan" },
]
description = "Tools for processing manga/comic panels: border removal and panel sorting."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Intended Audience :: Developers",
]
keywords = ["manga", "comics", "panel", "border", "opencv", "image processing", "sorting"]

# This section is crucial: it defines your project's dependencies.
# pip will automatically install these for the user.
dependencies = [
    "numpy",
    "opencv-contrib-python"  # This includes cv2.ximgproc.thinning
]

[project.urls]
Homepage = "https://github.com/avan06/manga-panel-processor"
Issues = "https://github.com/avan06/manga-panel-processor/issues"
